// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion with extra class 1`] = `
<details
  className="ola_accordion foo"
>
  <summary
    className="ola_accordion-header"
  >
    <div
      className="ola_accordion-header-content"
    >
      <span
        className="ola_accordion-marker"
      >
        <svg
          className="ola_icon is-medium"
          fillRule="evenodd"
          height="28"
          viewBox="0 0 28 28"
          width="28"
        >
          <path
            d="M14 15.586l5.293-5.293a1 1 0 0 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L14 15.586z"
          />
        </svg>
      </span>
      <span
        className="ola_accordion-title"
      >
        See more
      </span>
    </div>
  </summary>
  <div
    className="ola_accordion-content"
  >
    Lorem ipsum dolor sit amet
  </div>
</details>
`;

exports[`Default accordion 1`] = `
<details
  className="ola_accordion"
>
  <summary
    className="ola_accordion-header"
  >
    <div
      className="ola_accordion-header-content"
    >
      <span
        className="ola_accordion-marker"
      >
        <svg
          className="ola_icon is-medium"
          fillRule="evenodd"
          height="28"
          viewBox="0 0 28 28"
          width="28"
        >
          <path
            d="M14 15.586l5.293-5.293a1 1 0 0 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L14 15.586z"
          />
        </svg>
      </span>
      <span
        className="ola_accordion-title"
      >
        See more
      </span>
    </div>
  </summary>
  <div
    className="ola_accordion-content"
  >
    Lorem ipsum dolor sit amet
  </div>
</details>
`;

exports[`Open accordion 1`] = `
<details
  className="ola_accordion"
  open={true}
>
  <summary
    className="ola_accordion-header"
  >
    <div
      className="ola_accordion-header-content"
    >
      <span
        className="ola_accordion-marker"
      >
        <svg
          className="ola_icon is-medium"
          fillRule="evenodd"
          height="28"
          viewBox="0 0 28 28"
          width="28"
        >
          <path
            d="M14 15.586l5.293-5.293a1 1 0 0 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L14 15.586z"
          />
        </svg>
      </span>
      <span
        className="ola_accordion-title"
      >
        See more
      </span>
    </div>
  </summary>
  <div
    className="ola_accordion-content"
  >
    Lorem ipsum dolor sit amet
  </div>
</details>
`;
